--- a/fixed.html
+++ b/fixed.html
@@ -22,6 +22,9 @@
 <body>
 <div class="div1">层1</div>
 <div class="div2">层2</div>
+<div class="div2">层3</div>
+<div class="div2">层42</div>
+<div class="div2">层245</div>
 
 </body>
 </html>
